--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -12,6 +12,8 @@
 }
 .hero-right{
     flex: 1;
+    background-color: var(--orange);
+    position: relative;
 }
 .ad{
     margin-top: 4rem;
@@ -54,4 +56,66 @@
     text-transform: none;
     width: 80%;
     letter-spacing: 1px;
+}
+.figures{
+    gap: 2rem;
+    display: flex;
+}
+.figures>div{
+    display: flex;
+    flex-direction: column;
+}
+.figures>div>span:nth-of-type(1){
+    color: white;
+    font-size: 2rem;
+}
+.figures>div>span:nth-of-type(2){
+    color: var(--gray);
+    text-transform: uppercase;
+}
+.hero-buttons{
+    display: flex;
+    gap: 1rem;
+    font-weight: normal;
+}
+.hero-buttons>:nth-child(1)
+{
+    width: 8rem;
+    color: white;
+    background-color: var(--orange);
+}
+.hero-buttons>:nth-child(2){
+    color: white;
+    background-color: transparent;
+    width: 8rem;
+    border: 2px solid var(--orange);
+}
+.hero-right>.btn{
+    position: absolute;
+    top: 2rem;
+    right: 3rem;
+    color: black;
+}
+.heart-rate{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    background-color: var(--darkGrey);
+    width: fit-content;
+    padding: 1rem;
+    align-items: flex-start;
+    border-radius: 5px;
+    position: absolute;
+    right: 4rem;
+    top: 7rem;
+}
+.heart-rate>img{
+    width: 2rem;
+}
+.heart-rate>:nth-child(2){
+    color: var(--gray);
+}
+.heart-rate>:nth-child(3){
+    color: white;
+    font-size: 1.5rem;
 }
