--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -119,3 +119,42 @@
     color: white;
     font-size: 1.5rem;
 }
+.hero-image{
+    position: absolute;
+    width: 23rem;
+    top: 10rem;
+    right: 8rem;
+}
+.hero-image-back{
+    z-index: -1;
+    position: absolute;
+    top: 4rem;
+    right: 20rem;
+    width: 15rem;
+}
+.calories{
+    display: flex;
+    gap: 2rem;
+    background-color: var(--caloryCard);
+    border-radius: 5px;
+    padding: 1rem;
+    width: fit-content;
+    position: absolute;
+    top: 33rem;
+    right: 28rem;
+}
+.calories>img{
+    width: 3rem;
+}
+.calories>div{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.calories>div>:nth-child(1){
+    color: var(--gray);
+}
+.calories>div>:nth-child(2){
+    color: white;
+    font-size: 1.5rem;
+}
