--- a/src/Components/Programs/Program.css
+++ b/src/Components/Programs/Program.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    padding: 0.2rem;
+    padding: 0rem 2rem;
 }
 .programs-header{
     display: flex;
@@ -20,6 +20,7 @@
 }
 .category{
     display: flex;
+    flex: 1 1;
     flex-direction: column;
     padding: 2rem;
     gap: 1rem;
