--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -158,3 +158,15 @@
     color: white;
     font-size: 1.5rem;
 }
+@media screen and (max-width:760px) {
+    .hero{
+        flex-direction: column;
+    }
+    .ad{
+        margin-top: 0;
+        font-size: small;
+        align-self: center;
+        transform: scale(0.8);
+    }
+    
+}
