--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -16,3 +16,16 @@
     cursor: pointer;
     color: var(--orange);
 }
+@media screen and (max-width:760px){
+    .header>:nth-child(2)
+    {
+        z-index: 99;
+        right: 2rem;
+        position: fixed;
+    }
+    .header-list{
+        flex-direction: column;
+        padding: 2rem;
+        background-color: var(--appColor);
+    }
+}
