--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -168,5 +168,53 @@
         align-self: center;
         transform: scale(0.8);
     }
-    
+    .hero-text{
+        font-size: xx-large;
+        align-items: center;
+        justify-content: center;
+    }
+    .hero-text > div:nth-of-type(3){
+        font-weight: 200;
+        font-size: small;
+        text-align: center;
+        letter-spacing: 1px;
+    }  
+    .hero-buttons{
+        justify-content: center;
+    }
+    .figures > div > span :nth-of-type(1){
+        font-size: large;
+    }
+    .figures > div > span :nth-of-type(2){
+        font-size: small;
+    }
+    .heart-rate{
+        left: 1rem;
+        top: 2rem;
+    }
+    .calories{
+        position: relative;
+        top: 5rem;
+        left: 2rem;
+    }
+    .calories>img{
+        width: 2rem;
+    }
+    .calories>div>:nth-child(2){
+        color: white;
+        font-size: 1rem;
+    }
+    .hero-image{
+        position: relative;
+        align-self: center;
+        width: 15rem;
+        left: 7rem;
+        top: 4rem;
+    }
+    .hero-image-back{
+        top: 0rem;
+        width: 15rem;
+        left: 2rem;
+    }
+
 }
