--- a/src/Components/Join/Join.css
+++ b/src/Components/Join/Join.css
@@ -46,3 +46,16 @@
     background: var(--orange);
     color: white;
 }
+@media screen and (max-width:760px) {
+    .join{
+        flex-direction: column;
+        gap: 1rem;
+    }
+    .left-j{
+        flex-direction: column;
+        font-size: x-large;
+    }
+    .right-j{
+        padding: 2rem;    
+    }
+}
