--- a/src/Components/Plans/Plans.css
+++ b/src/Components/Plans/Plans.css
@@ -64,3 +64,12 @@
 .plans>:nth-child(2)>button{
     color: orange;
 }
+@media screen and (max-width:760px) {
+    .plans{
+        flex-direction: column;
+    }
+    .plans>:nth-child(2)
+    {
+        transform: none;
+    }
+}
